migrate to oapi-codegen
